--- a/apps/kafka-metrics/docker-compose.jmxreceiver.yaml
+++ b/apps/kafka-metrics/docker-compose.jmxreceiver.yaml
@@ -9,11 +9,17 @@ services:
       KAFKA_OPTS: "-Dzookeeper.4lw.commands.whitelist=*"
     ports:
       - 2181:2181
-  
+    healthcheck:
+      test: ["CMD", "sh", "-c", "echo ruok | nc localhost 2181 | grep imok"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   kafka:
     image: confluentinc/cp-kafka:latest
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     ports:
       - 29092:29092
       - 9092:9092
