Everything is working

--- a/apps/rolldice-game/docker-compose.yml
+++ b/apps/rolldice-game/docker-compose.yml
@@ -13,6 +13,9 @@ services:
         condition: service_started
       scoring:
         condition: service_started
+    environment:
+      - OTEL_SERVICE_NAME=controller
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otelcol:4317
 
 
   rolling:
@@ -20,10 +23,13 @@ services:
       context: ./rolling
       dockerfile: Dockerfile
     ports:
-      - "5004"
+      - "5004:5004"
     depends_on:
       otelcol:
         condition: service_started
+    environment:
+      - OTEL_SERVICE_NAME=rolly
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otelcol:4317
 
 
   scoring:
@@ -31,10 +37,13 @@ services:
       context: ./scoring
       dockerfile: Dockerfile
     ports:
-      - "5001"
+      - "5001:5001"
     depends_on:
       otelcol:
         condition: service_started
+    environment:
+      - OTEL_SERVICE_NAME=scorey
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otelcol:4317
 
 
   otelcol:
@@ -48,7 +57,10 @@ services:
     volumes:
       - ./config.yml:/etc/otelcol-config.yml
     ports:
-      - "4318" # OTLP http receiver
-      - "4317"
+      - "4318:4318" # OTLP http receiver
+      - "4317:4317"
+    environment:
+      - DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_GRPC_ENDPOINT=0.0.0.0:4317
+      - DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_HTTP_ENDPOINT=0.0.0.0:4318
       
 
