--- a/apps/rest-services/java/calendar/deploys/Dockerfile.otel
+++ b/apps/rest-services/java/calendar/deploys/Dockerfile.otel
@@ -6,9 +6,8 @@ FROM openjdk:17-buster
 RUN apt-get update -y; apt-get install curl -y
 
 WORKDIR /home/otel
-RUN curl -Lo opentelemetry-javaagent.jar https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar
-
-COPY . calendar/  
+RUN curl -Lo opentelemetry-javaagent.jar  https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v2.4.0/opentelemetry-javaagent.jar
+COPY . calendar/
 
 WORKDIR /home/otel/calendar
 
