--- a/apps/rest-services/java/calendar/deploys/calendar/values.yaml
+++ b/apps/rest-services/java/calendar/deploys/calendar/values.yaml
@@ -2,12 +2,12 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 3
 image:
-  repository: pablobaeyens/calendar-app
+  repository: dineshgurumurthydd/calendar-java
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "20240507-01"
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
