Add Datadog connector to all examples that use traces

--- a/apps/game-of-life/go/game-of-life-otel/example/collector_config.yml
+++ b/apps/game-of-life/go/game-of-life-otel/example/collector_config.yml
@@ -26,8 +26,8 @@ receivers:
         type: json_parser
 
 exporters:
-  logging:
-    loglevel: debug
+  debug:
+    verbosity: detailed
   datadog/api:
     host_metadata:
       tags:
@@ -35,6 +35,9 @@ exporters:
         - example:tag
     api:
       key: "${DD_API_KEY}"
+
+connectors:
+  datadog/connector:
 
 processors:
   batch:
@@ -47,10 +50,18 @@ service:
     logs:
       level: debug
   pipelines:
+    metrics:
+      receivers: [otlp, hostmetrics, datadog/connector]
+      processors: [batch, resourcedetection]
+      exporters: [datadog/api]
+    traces/sampling:
+      receivers: [datadog/connector]
+      processors: [] # Add any sampling here
+      exporters: [datadog/api]
     traces:
       receivers: [otlp]
       processors: [batch,resourcedetection]
-      exporters: [logging, datadog/api]
+      exporters: [debug, datadog/connector]
     logs:
       receivers: [filelog]
       processors: [batch, resourcedetection]
