--- a/apps/rest-services/java/calendar/src/main/resources/otelcol-config.yaml
+++ b/apps/rest-services/java/calendar/src/main/resources/otelcol-config.yaml
@@ -32,7 +32,7 @@ service:
       receivers: [otlp]
       processors: [batch]
       exporters: [datadog/connector]
-    traces/2: # this pipeline uses sampling and sends traces
+    traces/sampling: # this pipeline uses sampling and sends traces
       receivers: [otlp]
       processors: [probabilistic_sampler, batch]
       exporters: [datadog]
