Add api::site to all examples

--- a/apps/game-of-life/go/game-of-life-otel/example/collector_config.yml
+++ b/apps/game-of-life/go/game-of-life-otel/example/collector_config.yml
@@ -34,7 +34,8 @@ exporters:
         - otlp:true
         - example:tag
     api:
-      key: "${DD_API_KEY}"
+      key: ${DD_API_KEY}
+      site: ${DD_SITE}
 
 processors:
   batch:
