--- a/apps/rest-services/java/calendar/src/main/resources/otelcol-config.yaml
+++ b/apps/rest-services/java/calendar/src/main/resources/otelcol-config.yaml
@@ -14,6 +14,7 @@ exporters:
     hostname: "otelcol-docker"
     api:
       key: ${DD_API_KEY}
+      site: ${DD_SITE}
 processors:
   batch:
   # using the sampler
