Apply suggestions from code review
Co-authored-by: Yang Song <songy23@users.noreply.github.com>

--- a/apps/kafka-metrics/otel-collector-config-gatherer.yaml
+++ b/apps/kafka-metrics/otel-collector-config-gatherer.yaml
@@ -42,7 +42,7 @@ service:
       processors: [batch]
       exporters: [datadog/connector]
     traces/sampling:
-      receivers: [datadog]
+      receivers: [datadog/connector]
       processors: [] # Add any sampling here
       exporters: [datadog]
     logs:
