--- a/configurations/opentelemetry-collector/minimal-config.yaml
+++ b/configurations/opentelemetry-collector/minimal-config.yaml
@@ -75,4 +75,4 @@ service:
       receivers: [otlp]
       # Add any sampling here
       processors: [batch]
-      exporters: [datadog/connector]
+      exporters: [datadog]
