--- a/apps/manual-container-metrics/values.yaml
+++ b/apps/manual-container-metrics/values.yaml
@@ -93,6 +93,8 @@ spec:
               value: "4317"
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
               value: 'http://$(HOST_IP):$(OTLP_GRPC_PORT)'
+            - name: OTEL_EXPORTER_OTLP_PROTOCOL
+              value: grpc
             - name: OTEL_RESOURCE_ATTRIBUTES
               value: >-
                 service.name=$(OTEL_SERVICE_NAME),
