--- a/apps/rest-services/dotnet/docker-compose-otel.yaml
+++ b/apps/rest-services/dotnet/docker-compose-otel.yaml
@@ -10,6 +10,7 @@ services:
     environment:
       - OTEL_SERVICE_NAME=random-date-dotnet-otel
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
       - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
       - ASPNETCORE_URLS=http://+:5078
     ports:
