--- a/apps/game-of-life/go/docker-compose-otel.yaml
+++ b/apps/game-of-life/go/docker-compose-otel.yaml
@@ -10,6 +10,7 @@ services:
     environment:
       - OTEL_SERVICE_NAME=game-of-life-webapp-otel
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
       - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
       - HTTP_PORT=8080
       - SERVER_ADDRESS=game-of-life-server:8081
@@ -25,6 +26,7 @@ services:
     environment:
       - OTEL_SERVICE_NAME=game-of-life-server-otel
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
       - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
       - GRPC_PORT=8081
       - HTTP_PORT=8082
