--- a/apps/rest-services/java/calendar/deploys/docker/docker-compose-otel-agent.yaml
+++ b/apps/rest-services/java/calendar/deploys/docker/docker-compose-otel-agent.yaml
@@ -15,6 +15,7 @@ services:
     environment:
       - OTEL_SERVICE_NAME=calendar-otel-agent
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
       - OTEL_LOGS_EXPORTER=otlp
       - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
       - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
