--- a/apps/span-links/otel/docker-compose-otel.yaml
+++ b/apps/span-links/otel/docker-compose-otel.yaml
@@ -39,6 +39,7 @@ services:
     environment:
       - OTEL_SERVICE_NAME=words-producer-java-otel
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent-kafka-otel:4317
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
       - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=otel-kafka,host.name=otelcol-docker
       - SERVER_PORT=9090
       - KAFKA_SERVERS=kafka-otel:9092
