--- a/apps/w3c-trace-context/docker-compose-dd-otel-both.yaml
+++ b/apps/w3c-trace-context/docker-compose-dd-otel-both.yaml
@@ -30,6 +30,7 @@ services:
     environment:
       - OTEL_SERVICE_NAME=calendar-java-otel
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
       - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
       - CALENDAR_SERVICE_URL=http://calendar-py-dd:9090
       - SERVER_PORT=8081
@@ -63,6 +64,7 @@ services:
     environment:
       - OTEL_SERVICE_NAME=calendar-py-otel
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
       - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
       - OTEL_TRACES_EXPORTER=otlp
       - OTEL_METRICS_EXPORTER=otlp
