--- a/apps/w3c-trace-context/java/calendar/src/main/resources/otelcol-config.yaml
+++ b/apps/w3c-trace-context/java/calendar/src/main/resources/otelcol-config.yaml
@@ -9,6 +9,7 @@ exporters:
     hostname: "otelcol-docker"
     api:
       key: ${DD_API_KEY}
+      site: ${DD_SITE}
 
 connectors:
   datadog/connector:
