--- a/configurations/opentelemetry-collector/daemonset.yaml
+++ b/configurations/opentelemetry-collector/daemonset.yaml
@@ -10,9 +10,12 @@ config:
   exporters:
     datadog:
       api:
-        key: "${DD_API_KEY}"
+        key: ${env:DD_API_KEY}
+        site: ${env:DD_SITE}
+
   connectors:
     datadog/connector:
+
   service:
     telemetry:
       metrics:
@@ -36,3 +39,6 @@ extraEnvs:
         name: datadog-secrets
         key: api-key
         optional: false
+  - name: DD_SITE
+    value: datadoghq.com
+
