--- a/apps/rest-services/java/calendar/deploys/Dockerfile.otel
+++ b/apps/rest-services/java/calendar/deploys/Dockerfile.otel
@@ -11,8 +11,16 @@ COPY . calendar/
 
 WORKDIR /home/otel/calendar
 
-#Compile with gradle
+COPY ./jmx_metrics_config.yaml ./jmx_metrics_config.yaml
 RUN ./gradlew build
 
-ENTRYPOINT ["java","-javaagent:../opentelemetry-javaagent.jar",  "-jar" , "build/libs/calendar-0.0.1-SNAPSHOT.jar"]
+ENV JAVA_OPTS="-Dcom.sun.management.jmxremote \
+               -Dcom.sun.management.jmxremote.port=9092 \
+               -Dcom.sun.management.jmxremote.authenticate=false \
+               -Dcom.sun.management.jmxremote.ssl=false \
+               -Dcom.sun.management.jmxremote.rmi.port=9093\
+               -Djava.rmi.server.hostname=127.0.0.1"
+ENTRYPOINT exec java ${JAVA_OPTS} -javaagent:../opentelemetry-javaagent.jar -Dotel.jmx.config=./jmx_metrics_config.yaml -jar build/libs/calendar-0.0.1-SNAPSHOT.jar
+
+#ENTRYPOINT ["java", "-javaagent:../opentelemetry-javaagent.jar", "-Dotel.jmx.config=./jmx_metrics_config.yaml",  "-jar" , "build/libs/calendar-0.0.1-SNAPSHOT.jar"]
 EXPOSE 8080
