Calendar app: use instrumentation annotations with Java agent
* Add a dependency on the `opentelemetry-instrumentation-annotations` library
  to use `@WithSpan` annotation.
* Move `getDate` method to the `CalendarService` class.
* Update OTel Java Agent to the latest `2.6.0` version

--- a/apps/rest-services/java/calendar/build.gradle
+++ b/apps/rest-services/java/calendar/build.gradle
@@ -9,7 +9,6 @@ plugins {
     id 'application'
     id 'org.springframework.boot' version '3.0.2'
     id 'io.spring.dependency-management' version '1.1.0'
-
 }
 
 repositories {
@@ -28,8 +27,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.6'
     runtimeOnly 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:1.28.0-alpha'
     implementation 'io.opentelemetry:opentelemetry-api:1.28.0'
-
-
+    implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:2.6.0'
 }
 
 group = 'com.datadog.example'
