--- a/apps/rest-services/java/calendar/deploys/calendar/templates/deployment.yaml
+++ b/apps/rest-services/java/calendar/deploys/calendar/templates/deployment.yaml
@@ -91,3 +91,7 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
