--- a/apps/kafka-metrics/Dockerfile.collector
+++ b/apps/kafka-metrics/Dockerfile.collector
@@ -1,10 +1,18 @@
-FROM alpine:latest as prep
+FROM golang:1.23 AS builder
 
-# OpenTelemetry Collector Binary
-ARG OTEL_VERSION=0.93.0
-ARG TARGETARCH=linux_amd64
-ADD "https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v${OTEL_VERSION}/otelcol-contrib_${OTEL_VERSION}_${TARGETARCH}.tar.gz" /otelcontribcol
-RUN tar -zxvf /otelcontribcol
+ENV CGO_ENABLED=0
+
+RUN go install go.opentelemetry.io/collector/cmd/builder@v0.108.0
+
+# NOTE: We need to modify the datadogexporter to disable metric remapping
+WORKDIR /src
+RUN git clone -b v0.108.0 --depth 1 https://github.com/open-telemetry/opentelemetry-collector-contrib
+COPY ./disable-remapping.patch .
+RUN cd /src/opentelemetry-collector-contrib && git apply ../disable-remapping.patch
+
+WORKDIR /otelcol
+COPY ./otelcol-mod-build.yaml .
+RUN builder --config=otelcol-mod-build.yaml
 
 # JMX Metrics Gatherer Jar
 ARG JMX_GATHERER_JAR_VERSION=1.27.0
@@ -13,12 +21,15 @@ ADD https://github.com/open-telemetry/opentelemetry-java-contrib/releases/downlo
 ARG USER_UID=65532
 RUN chown ${USER_UID} /opt/opentelemetry-jmx-metrics.jar
 
+FROM gcr.io/distroless/java17-debian11:nonroot-arm64
 
-FROM gcr.io/distroless/java17-debian11:nonroot
+COPY --from=builder /otelcol/_build/otelcol-mod /otelcol-mod
+COPY --from=builder /opt/opentelemetry-jmx-metrics.jar /opt/opentelemetry-jmx-metrics.jar
 
-COPY --from=prep /opt/opentelemetry-jmx-metrics.jar /opt/opentelemetry-jmx-metrics.jar
-COPY --from=prep /otelcol-contrib /otelcol-contrib
+# HACK: create /etc directory for configs
+# WORKDIR /etc/
+# WORKDIR /
 
 EXPOSE 4317 55680 55679
-ENTRYPOINT ["/otelcol-contrib"]
+ENTRYPOINT ["/otelcol-mod"]
 CMD ["--config", "/etc/otelcol-contrib/config.yaml"]
