--- a/apps/kafka-metrics/docker-compose.jmxreceiver.yaml
+++ b/apps/kafka-metrics/docker-compose.jmxreceiver.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -81,3 +79,4 @@ services:
       - "4318:4318"
     environment:
       - DD_API_KEY
+      - DD_SITE
