--- a/apps/rest-services/java/calendar/deploys/calendar/values.yaml
+++ b/apps/rest-services/java/calendar/deploys/calendar/values.yaml
@@ -5,9 +5,9 @@
 replicaCount: 3
 image:
   repository: datadog/opentelemetry-examples
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "calendar-java-20240815-01"
+  tag: "calendar-java-20240826"
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -45,3 +45,4 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 tolerations: []
 affinity: {}
+nodeSelector: {}
