--- a/apps/rest-services/py/requirements.txt
+++ b/apps/rest-services/py/requirements.txt
@@ -1,45 +1,47 @@
-backoff==2.2.1
-blinker==1.6.3
-certifi==2023.7.22
-charset-normalizer==3.3.0
-click==8.1.7
-Deprecated==1.2.14
-Flask==3.0.0
-googleapis-common-protos==1.61.0
-grpcio==1.59.0
-idna==3.4
-importlib-metadata==6.8.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-opentelemetry-api==1.20.0
-opentelemetry-distro==0.41b0
-opentelemetry-exporter-otlp==1.20.0
-opentelemetry-exporter-otlp-proto-common==1.20.0
-opentelemetry-exporter-otlp-proto-grpc==1.20.0
-opentelemetry-exporter-otlp-proto-http==1.20.0
-opentelemetry-instrumentation==0.41b0
-opentelemetry-instrumentation-aws-lambda==0.41b0
-opentelemetry-instrumentation-dbapi==0.41b0
-opentelemetry-instrumentation-flask==0.41b0
-opentelemetry-instrumentation-grpc==0.41b0
-opentelemetry-instrumentation-jinja2==0.41b0
-opentelemetry-instrumentation-logging==0.41b0
-opentelemetry-instrumentation-requests==0.41b0
-opentelemetry-instrumentation-sqlite3==0.41b0
-opentelemetry-instrumentation-urllib==0.41b0
-opentelemetry-instrumentation-urllib3==0.41b0
-opentelemetry-instrumentation-wsgi==0.41b0
-opentelemetry-propagator-aws-xray==1.0.1
-opentelemetry-proto==1.20.0
-opentelemetry-sdk==1.20.0
-opentelemetry-semantic-conventions==0.41b0
-opentelemetry-util-http==0.41b0
-packaging==23.2
-protobuf==4.24.4
-requests==2.32.0
-typing_extensions==4.8.0
-urllib3==2.0.7
-Werkzeug==3.0.1
-wrapt==1.15.0
-zipp==3.17.0
+backoff>=2.2.1
+blinker>=1.6.3
+certifi>=2023.7.22
+charset-normalizer>=3.3.0
+click>=8.1.7
+Deprecated>=1.2.14
+Flask>=3.0.0
+googleapis-common-protos>=1.61.0
+grpcio>=1.59.0
+idna>=3.4
+importlib-metadata>=6.8.0
+itsdangerous>=2.1.2
+Jinja2>=3.1.2
+MarkupSafe>=2.1.3
+opentelemetry-api>=1.20.0
+opentelemetry-distro>=0.41b0
+opentelemetry-exporter-otlp>=1.20.0
+opentelemetry-exporter-otlp-proto-common>=1.20.0
+opentelemetry-exporter-otlp-proto-grpc>=1.20.0
+opentelemetry-exporter-otlp-proto-http>=1.20.0
+opentelemetry-instrumentation>=0.41b0
+opentelemetry-instrumentation-aws-lambda>=0.41b0
+opentelemetry-instrumentation-dbapi>=0.41b0
+opentelemetry-instrumentation-flask>=0.41b0
+opentelemetry-instrumentation-grpc>=0.41b0
+opentelemetry-instrumentation-jinja2>=0.41b0
+opentelemetry-instrumentation-logging>=0.41b0
+opentelemetry-instrumentation-psycopg>=0.41b0
+opentelemetry-instrumentation-requests>=0.41b0
+opentelemetry-instrumentation-sqlite3>=0.41b0
+opentelemetry-instrumentation-urllib>=0.41b0
+opentelemetry-instrumentation-urllib3>=0.41b0
+opentelemetry-instrumentation-wsgi>=0.41b0
+opentelemetry-propagator-aws-xray>=1.0.1
+opentelemetry-proto>=1.20.0
+opentelemetry-sdk>=1.20.0
+opentelemetry-semantic-conventions>=0.41b0
+opentelemetry-util-http>=0.41b0
+packaging>=23.2
+protobuf>=4.24.4
+psycopg-binary>=3.2.3
+requests>=2.32.0
+typing_extensions>=4.8.0
+urllib3>=2.0.7
+Werkzeug>=3.0.1
+wrapt>=1.15.0
+zipp>=3.17.0
