Update Java calendar example

--- a/apps/rest-services/java/calendar/deploys/docker/docker-compose-otlp-ingest.yml
+++ b/apps/rest-services/java/calendar/deploys/docker/docker-compose-otlp-ingest.yml
@@ -13,30 +13,25 @@ services:
       dockerfile: deploys/Dockerfile.otel
     image: calendar-rest.otel
     environment:
-      - OTEL_SERVICE_NAME=calendar-otel-agent
+      - OTEL_SERVICE_NAME=calendar-otlp-ingest
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://datadog-agent:4317
       - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
-      - OTEL_LOGS_EXPORTER=otlp
       - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
-      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
     ports:
       - "9090:9090"
   # Agent
   datadog-agent:
     container_name: datadog-agent
-    image: "datadog/agent:7.51.0-rc.3"
+    image: "datadog/agent:7.63.0-rc.1"
     pid: host
     ports:
       - 4317:4317
     environment:
       - DD_API_KEY
+      - DD_SITE
       - DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_GRPC_ENDPOINT=0.0.0.0:4317
       - DD_OTLP_CONFIG_LOGS_ENABLED=true
-      - DD_APM_NON_LOCAL_TRAFFIC=true
-      - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
       - DD_LOGS_ENABLED=true
-      - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
-      - DD_CONTAINER_EXCLUDE=name:datadog-agent
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /proc/:/host/proc/:ro
