--- a/apps/rest-services/java/calendar/deploys/docker/docker-compose-dd-sdk.yml
+++ b/apps/rest-services/java/calendar/deploys/docker/docker-compose-dd-sdk.yml
@@ -10,32 +10,28 @@ services:
     container_name: calendar
     build:
       context: ../../
-      dockerfile: deploys/Dockerfile.calendar.java.dd
+      dockerfile: deploys/Dockerfile.dd
     image: calendar-rest.dd
     environment:
-      - DD_SERVICE=calendar-dd
+      - DD_SERVICE=calendar-dd-sdk
       - DD_ENV=docker
       - DD_VERSION=1.0-beta
       - DD_TRACE_OTEL_ENABLED=true
-      - OTEL_LOGS_EXPORTER=otlp
       - DD_TRACE_PROPAGATION_STYLE_INJECT=tracecontext
       - DD_TRACE_PROPAGATION_STYLE_EXTRACT=tracecontext
-      - SERVER_PORT=9090
       - DD_AGENT_HOST=datadog-agent
     ports:
       - "9090:9090"
   datadog-agent:
     container_name: datadog-agent
-    image: "datadog/agent-dev:master"
+    image: "datadog/agent:7.63.0-rc.1"
     pid: host
     ports:
       - 4317:4317
     environment:
       - DD_API_KEY
-      - DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_GRPC_ENDPOINT=0.0.0.0:4317
-      - DD_OTLP_CONFIG_LOGS_ENABLED=true
+      - DD_SITE
       - DD_APM_NON_LOCAL_TRAFFIC=true
-      - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
       - DD_LOGS_ENABLED=true
       - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
       - DD_CONTAINER_EXCLUDE=name:datadog-agent
