--- a/apps/rest-services/java/calendar/deploys/docker/docker-compose-otelcol.yml
+++ b/apps/rest-services/java/calendar/deploys/docker/docker-compose-otelcol.yml
@@ -13,23 +13,23 @@ services:
       dockerfile: deploys/Dockerfile.otel
     image: calendar-rest.otel
     environment:
-      - OTEL_SERVICE_NAME=calendar-otel
+      - OTEL_SERVICE_NAME=calendar-otelcol
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otelcol:4317
-      - OTEL_LOGS_EXPORTER=otlp
-      - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
       - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+      - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=docker,host.name=otelcol-docker
     ports:
       - "9090:9090"
   # open-telemetry collector
   otelcol:
     image: otel/opentelemetry-collector-contrib:latest
-    container_name: otel-col
+    container_name: otelcol
     deploy:
       resources:
         limits:
           memory: 100M
     environment:
       - DD_API_KEY
+      - DD_SITE
     restart: always
     command: ["--config=/etc/otelcol-config.yml"]
     volumes:
